--- a/app/css/main.css
+++ b/app/css/main.css
@@ -245,6 +245,7 @@ textarea {
 		margin: 30px 50px 30px 50px;
 		padding: 10px;
 		box-shadow: none;
+		display:inline-block;
 	}
 	
 	.init .elem .dibujo, .subsoporte .subdibujo {
